# csg

./: Cargo.toml  README.md
examples/: pretty_print.rs
src/: bin_op.rs  binary_object.rs  binary_operations.rs  csg_binary_object.rs  csg_binary_operations.rs  csg_modifiers.rs  csg_node.rs  csg_object.rs  csg_operations.rs  csg_primitives.rs  csg_traits.rs  distance_func.rs  lib.rs  modifiers.rs  node.rs  object.rs  operations.rs  primitive.rs  primitives.rs  test.rs  traits.rs  unary_op.rs
src/binary_operations/: binary_intersection.rs  binary_union.rs  substraction.rs
src/csg_binary_operations/: binary_intersection.rs  binary_union.rs  substraction.rs
src/csg_operations/: intersection.rs  union.rs
src/csg_primitives/: capped_torus.rs  sphere.rs
src/csg_traits/: csg_tree_size.rs  distance_func.rs  node_iter.rs
src/operations/: intersection.rs  substraction.rs  union.rs
src/primitives/: cube.rs  sphere.rs
src/test/: serialization.rs
src/traits/: binarize.rs  bounding_cube.rs  distance_func.rs  node_iter.rs  tree_height.rs  tree_size.rs
